fix: style card number on mobile

--- a/src/css/credit-card.css
+++ b/src/css/credit-card.css
@@ -30,6 +30,7 @@
 
   color: #e8e8e8;
   text-shadow: 0 0.12rem 0.32rem rgb(23 23 23 / 40%);
+  text-decoration: none;
 }
 
 .cc-holder,
